Correction on container selection for Orchard.Core and Orchard.Framework.

--- a/src/Modules/Laser.Orchard.Translator/Views/Translator/TranslatorForm.cshtml
+++ b/src/Modules/Laser.Orchard.Translator/Views/Translator/TranslatorForm.cshtml
@@ -99,15 +99,15 @@
     }
 
     containers.Add(new SelectListItem() {
-        Text = Model.ContainerName,
-        Value = "Y" + Model.ContainerName,
+        Text = "Orchard.Core",
+        Value = "Y" + "Orchard.Core",
         Group = orchardCoreGroup,
         Selected = true
     });
 
     containers.Add(new SelectListItem() {
-        Text = Model.ContainerName,
-        Value = "Z" + Model.ContainerName,
+        Text = "Orchard.Framework",
+        Value = "Z" + "Orchard.Framework",
         Group = orchardFrameworkGroup,
         Selected = true
     });
