--- a/src/Modules/Laser.Orchard.NwazetIntegration/Views/GA4ShippingInfo.cshtml
+++ b/src/Modules/Laser.Orchard.NwazetIntegration/Views/GA4ShippingInfo.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Laser.Orchard.NwazetIntegration.ViewModels;
 @using Laser.Orchard.NwazetIntegration.Services;
-
+@using System.Globalization;
 @{
     var _GTMProductService = WorkContext.Resolve<IGTMProductService>();
     Script.Require("NwazetIntegration.TagManager").AtHead();
@@ -25,7 +25,7 @@
             @if (eventName.Equals("add_shipping_info", StringComparison.InvariantCultureIgnoreCase) && shippingInfoVM != null) {
                 <text>
                     window.GA4Data.ecommerce.currency = '@Html.Raw(shippingInfoVM.Currency)';
-                    window.GA4Data.ecommerce.value = @Html.Raw(shippingInfoVM.Value);
+                    window.GA4Data.ecommerce.value = @Html.Raw(shippingInfoVM.Value.ToString(CultureInfo.InvariantCulture));
                     window.GA4Data.ecommerce.coupon = '@Html.Raw(shippingInfoVM.Coupon)';
                     window.GA4Data.ecommerce.shipping_tier = '@Html.Raw(shippingInfoVM.ShippingTier)';
                 </text>
