--- a/src/Modules/Laser.Orchard.GoogleAnalytics/Views/EditorTemplates/Parts/GoogleAnalyticsSettings.cshtml
+++ b/src/Modules/Laser.Orchard.GoogleAnalytics/Views/EditorTemplates/Parts/GoogleAnalyticsSettings.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Laser.Orchard.GoogleAnalytics.Models.GoogleAnalyticsSettingsPart
 @using Laser.Orchard.GoogleAnalytics.Models;
-@using Laser.Orchard.GoogleAnalytics;
+@using Laser.Orchard.Cookies;
 <fieldset>
     <a name="googleanalitycssetting"></a>
     <legend>@T("Google Analytics")</legend>
@@ -70,19 +70,19 @@
             <div class="form-group">
                 <label>@T("Google Analitics Cookie Level")</label>
                 <div class="cookie-level">
-                    @Html.RadioButtonFor(m => m.CookieLevel, CookieLevels.Technical.ToString(), new { id = "TechnicalCookieLevel" })
+                    @Html.RadioButtonFor(m => m.CookieLevel, CookieType.Technical.ToString(), new { id = "TechnicalCookieLevel" })
                     <label for="TechnicalCookieLevel" class="forcheckbox">@T("Technical")</label>
                 </div>
                 <div class="cookie-level">
-                    @Html.RadioButtonFor(m => m.CookieLevel, CookieLevels.Statistical.ToString(), new { id = "StatisticalCookieLevel" })
+                    @Html.RadioButtonFor(m => m.CookieLevel, CookieType.Statistical.ToString(), new { id = "StatisticalCookieLevel" })
                     <label for="StatisticalCookieLevel" class="forcheckbox"> @T("Statistical")</label>
                 </div>
                 <div class="cookie-level">
-                    @Html.RadioButtonFor(m => m.CookieLevel, CookieLevels.Marketing.ToString(), new { id = "MarketingCookieLevel" })
+                    @Html.RadioButtonFor(m => m.CookieLevel, CookieType.Marketing.ToString(), new { id = "MarketingCookieLevel" })
                     <label for="MarketingCookieLevel" class="forcheckbox">@T("Marketing")</label>
                 </div>
                 <div class="cookie-level">
-                    @Html.RadioButtonFor(m => m.CookieLevel, CookieLevels.Preferences.ToString(), new { id = "PreferencesCookieLevel" })
+                    @Html.RadioButtonFor(m => m.CookieLevel, CookieType.Preferences.ToString(), new { id = "PreferencesCookieLevel" })
                     <label for="PreferencesCookieLevel" class="forcheckbox">@T("Preferences")</label>
                 </div>
 
