--- a/src/Modules/Contrib.Widgets/Styles/admin.widgets-container.css
+++ b/src/Modules/Contrib.Widgets/Styles/admin.widgets-container.css
@@ -88,3 +88,9 @@
 #available-widgets li a:hover {
   border-color: #487328;
 }
+#widgetsPlacement .expando-glyph {
+  left: 0px;
+}
+#widgetsPlacement .span-widget-container {
+  left: 20px;
+}
