--- a/src/Modules/Contrib.Widgets/Styles/admin.widgets-container.less
+++ b/src/Modules/Contrib.Widgets/Styles/admin.widgets-container.less
@@ -112,3 +112,13 @@
         }
     }
 }
+
+#widgetsPlacement {
+    .expando-glyph {
+        left: 0px;
+    }
+
+    .span-widget-container{
+        left:20px;
+    }
+}
