--- a/src/Modules/Laser.Orchard.PaymentGateway/Views/PosPayButton_BankTransfer.cshtml
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Views/PosPayButton_BankTransfer.cshtml
@@ -1,7 +1,7 @@
 ﻿<button type="submit"
         name="SelectedPosService"
-        value="CustomPos_@Model.CustomPos.Name"
+        value="CustomPos_@Model.PosName"
         style="padding: 10px 10px;"
         class="btn btn__bg d-block">
-    @T("Pay now with {0}", Model.CustomPos.Name)
+    @T("Pay now with {0}", Model.PosName)
 </button>
