Added provider management for order status. Corrections on shapes and service / providers implementations.

--- a/src/Modules/Laser.Orchard.PaymentGateway/Views/PosPayButton_CashOnDelivery.cshtml
+++ b/src/Modules/Laser.Orchard.PaymentGateway/Views/PosPayButton_CashOnDelivery.cshtml
@@ -3,5 +3,5 @@
         value="CustomPos_@Model.PosName"
         style="padding: 10px 10px;"
         class="btn btn__bg d-block">
-    @T("Pay via Bank Transfer")
+    @T("Pay on Delivery")
 </button>
