--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/ShortCodes/Parts/ShortCodes_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/ShortCodes/Parts/ShortCodes_Edit.cshtml
@@ -4,7 +4,7 @@
     Script.Require("jQueryColorBox").AtFoot();
 <div id="shortcode-@Model.Part-@Model.Field-container"
      data-type="shortcode-container"
-     data-element-id="@Model.ElementId">
+     data-element-name="@Model.ElementName">
     <label>@T("Insert Short Codes")</label>
     @foreach (var provider in Model.Descriptors) {
         provider.Editor.RouteValues.Add("type", Model.ContentType);
@@ -16,12 +16,12 @@
             provider.Editor.RouteValues.Add("field", Model.Field.FieldDefinition.Name);
         }
 
-        <a id="@Model.ElementId-@provider.Name"
+        <a id="@Model.ElementName.Replace(".","_")-@provider.Name"
            href="@Html.Raw(Url.Action(provider.Editor.ActionName,provider.Editor.ControllerName, provider.Editor.RouteValues))"
            data-type="shortcode-button"
            data-shortcode-format="@provider.ShortCodeFormat"
            data-flavor="@Model.ElementFlavor"
-           data-element-id="@Model.ElementId"
+           data-element-name="@Model.ElementName"
            class="btn btn-app shortcode shortcode-@provider.Name">
             <i class="@provider.ButtonIconClass"></i> 
             @provider.ButtonText
@@ -45,7 +45,7 @@
             var flavor = shortcode.data("flavor");
             var shortcodeFormat = shortcode.data("shortcode-format");
             var addUrl = shortcode.attr('href');
-            var elementId = shortcode.data("element-id");
+            var elementName = shortcode.data("element-name");
             if (addUrl != null) {
                 $.colorbox({
                     href: addUrl,
@@ -66,14 +66,13 @@
                             shortcode.trigger("closed");
                             return;
                         }
-                        //TODO: Add Insert Logic
                         if (flavor == "Html") {
-                            if (tinymce.editors[elementId]) {
-                                tinymce.editors[elementId].execCommand('mceInsertContent', false, selectedData)
+                            if (tinymce.editors[elementName.replace(".","_")]) {
+                                tinymce.editors[elementName.replace(".", "_")].execCommand('mceInsertContent', false, selectedData)
                             }
                         }
                         else {
-                            setTextToCurrentPos($('#' + elementId), selectedData);
+                            setTextToCurrentPos($("*[name='" + elementName + "']"), selectedData);
                         }
 
                         shortcode.trigger("closed");
@@ -83,8 +82,8 @@
         });
         $('*[data-type="shortcode-container"]').each(function () {
             var shortcodeContainer = $(this);
-            var elementId = shortcodeContainer.data("element-id");
-            var destinationContainer = $("#" + elementId).parent();
+            var elementName = shortcodeContainer.data("element-name");
+            var destinationContainer = $("*[name='" + elementName + "']").parent();
             shortcodeContainer.prependTo(destinationContainer);
         });
     </script>
