--- a/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/ShortCodes/ShortCodes_Edit.cshtml
+++ b/src/Modules/Laser.Orchard.StartupConfig/Views/EditorTemplates/ShortCodes/ShortCodes_Edit.cshtml
@@ -2,32 +2,34 @@
 @{
     Style.Require("jQueryColorBox").AtHead();
     Script.Require("jQueryColorBox").AtFoot();
-<div id="shortcode-@Model.Part-@Model.Field-container"
-     data-type="shortcode-container"
-     data-element-name="@Model.ElementName">
-    <label>@T("Insert Short Codes")</label>
-    @foreach (var provider in Model.Descriptors) {
-        provider.Editor.RouteValues.Add("type", Model.ContentType);
-        if (Model.Part != null) {
-            provider.Editor.RouteValues.Add("part", Model.Part.PartDefinition.Name);
-            provider.Editor.RouteValues.Add("hostId", Model.Part.Id);
-        }
-        if (Model.Field != null) {
-            provider.Editor.RouteValues.Add("field", Model.Field.FieldDefinition.Name);
-        }
+    var additionalUrlParameters = "";
+    <div id="shortcode-@Model.Part-@Model.Field-container"
+         data-type="shortcode-container"
+         data-element-name="@Model.ElementName">
+        <label>@T("Insert Short Codes")</label>
+        @foreach (var provider in Model.Descriptors) {
+            var routeValues = new RouteValueDictionary(provider.Editor.RouteValues);
+            routeValues.Add("type", Model.ContentType);
+            if (Model.Part != null) {
+                routeValues.Add("part", Model.Part.PartDefinition.Name);
+                routeValues.Add("hostId", Model.Part.Id);
+            }
+            if (Model.Field != null) {
+                routeValues.Add("field", Model.Field.Name);
+            }
 
-        <a id="@Model.ElementName.Replace(".","_")-@provider.Name"
-           href="@Html.Raw(Url.Action(provider.Editor.ActionName,provider.Editor.ControllerName, provider.Editor.RouteValues))"
-           data-type="shortcode-button"
-           data-shortcode-format="@provider.ShortCodeFormat"
-           data-flavor="@Model.ElementFlavor"
-           data-element-name="@Model.ElementName"
-           class="btn btn-app shortcode shortcode-@provider.Name">
-            <i class="@provider.ButtonIconClass"></i> 
-            @provider.ButtonText
-        </a>
-    }
-</div>
+            <a id="@Model.ElementName.Replace(".","_")-@provider.Name"
+               href="@Html.Raw(Url.Action(provider.Editor.ActionName,provider.Editor.ControllerName, routeValues))"
+               data-type="shortcode-button"
+               data-shortcode-format="@provider.ShortCodeFormat"
+               data-flavor="@Model.ElementFlavor"
+               data-element-name="@Model.ElementName"
+               class="btn btn-app shortcode shortcode-@provider.Name">
+                <i class="@provider.ButtonIconClass"></i>
+                @provider.ButtonText
+            </a>
+        }
+    </div>
 }
 @using (Script.Foot()) {
     <script type="text/javascript">
@@ -67,8 +69,8 @@
                             return;
                         }
                         if (flavor == "Html") {
-                            if (tinymce.editors[elementName.replace(".","_")]) {
-                                tinymce.editors[elementName.replace(".", "_")].execCommand('mceInsertContent', false, selectedData)
+                            if (tinymce.editors[elementName.replace(/\./g, "_")]) {
+                                tinymce.editors[elementName.replace(/\./g, "_")].execCommand('mceInsertContent', false, selectedData)
                             }
                         }
                         else {
